added info to our story-deleted from home, added photos, updated contact_us link

--- a/contact_us.html
+++ b/contact_us.html
@@ -64,7 +64,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact.html">CONTACT US</a>
+                        <a href="contact_us.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
@@ -131,10 +131,20 @@
 
         <hr> 
        
-  </div>
-  
-  
+<!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                <div class="col-sm-10">
+                    <small>Copyright &copy; Silver Dipper 2014. All Rights Reserved.</small>
+                </div>
+                <a href="#"><img src="images/FB.png" alt=""></a> &nbsp;<a href="#"><img src="images/twit.png" alt=""></a> &nbsp;<a href="#"><img src="images/insta.png" alt=""></a> &nbsp;
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
 
+    </div>
     <!-- /.container -->
 
     <!-- jQuery -->
