--- a/cakes.html
+++ b/cakes.html
@@ -66,7 +66,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact">CONTACT US</a>
+                        <a href="contact_us.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
@@ -75,13 +75,27 @@
         <!-- /.container -->
     </nav>
 
+    <!-- Half Page Image Background Carousel Header -->
+    <header id="myCarousel" class="carousel slide">
+
+        <!-- Wrapper for Slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <!-- Set the first background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('images/cakescarousel1.jpg');"></div>
+            </div>
+        </div>
+
+    </header>
     <!-- Page Content -->
     <div class="container">
 
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Ice Cream Cakes</h1>
+                <h1 class="page-header">Ice Cream
+                    <small>Cakes</small>
+                </h1>
             </div>
         </div>
         <!-- /.row -->
