--- a/flavors.html
+++ b/flavors.html
@@ -47,6 +47,8 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul style="padding-top: 20px" class="nav navbar-nav">
+
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="ourstory.html">OUR STORY</a>
@@ -66,7 +68,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact">CONTACT US</a>
+                        <a href="contact_us.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
