--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact.html">CONTACT US</a>
+                        <a href="contact_us.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/option2home1.jpg');"></div>
+                <div class="fill" style="background-image:url('images/homecarousel1.jpg');"></div>
                 <div class="carousel-caption">
                     <button type="button" class="btn-lg btn-primary">Try Now</button>
                 </div>
@@ -108,19 +108,6 @@
     <!-- Page Content -->
     <div class="container">
 
-        <div class="row">
-            <div class="col-lg-12">
-            <div class="col-sm-5">
-            <img src="images/shoppe2.png" alt="">
-            </div>
-            <div class="col-sm-7">
-                <h2>Serving the Best Ice Cream in Town
-                <br>
-                <small>Chocolate Shoppe Ice Cream</small></h2>
-                <p>Background story on Chocolate Shoppe</p>
-            </div>
-            </div>
-        </div>
         <br>
         <br>
         <div class="row">
