Changed every web page & some css

--- a/cakes.html
+++ b/cakes.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
-    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,700,600,300,500' rel='stylesheet' type='text/css'>
 
 </head>
@@ -51,9 +51,6 @@
                     <li>
                         <a href="ourstory.html">OUR STORY</a>
                     </li>
-                    <li>
-                        <a href="menu.html">STORE MENU</a>
-                    </li>
                     <li role="presentation" class="dropdown">
     			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       					ICE CREAM<span class="caret"></span>
@@ -66,7 +63,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact_us.html">CONTACT US</a>
+                        <a href="contact_us.html">LOCATIONS</a>
                     </li>
                 </ul>
             </div>
@@ -75,18 +72,23 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Half Page Image Background Carousel Header -->
-    <header id="myCarousel" class="carousel slide">
-
-        <!-- Wrapper for Slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/cakescarousel1.jpg');"></div>
-            </div>
-        </div>
-
-    </header>
+    <!-- Carousel
+================================================== -->
+<div class="overlay">Ice Cream Cakes</div>
+<div id="myCarousel" class="carousel slide">
+  <!-- Indicators -->
+  
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/cakespage.jpg" class="img-responsive">
+      <div class="container">
+        <div class="carousel-caption">
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /.carousel -->
     <!-- Page Content -->
     <div class="container">
 
@@ -103,23 +105,17 @@
         <!-- Projects Row -->
    	  <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
                 <img class="img-responsive" src="images/cakes/ZoreoCake.jpg">
-                </a>
                 <div class="text-center">
             	</div>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
                 <img class="img-responsive" src="images/cakes/CakeBatterFudgeCake.jpg">
-                </a>
                 <div class="text-center">
             	</div>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
                 <img class="img-responsive" src="images/cakes/HeapsOfLoveCake.jpg">
-                </a>
                 <div class="text-center">
             	</div>
             </div>
