--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
-    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,700,600,300,500' rel='stylesheet' type='text/css'>
 
 </head>
@@ -49,9 +49,6 @@
                     <li>
                         <a href="ourstory.html">OUR STORY</a>
                     </li>
-                    <li>
-                        <a href="menu.html">STORE MENU</a>
-                    </li>
                     <li role="presentation" class="dropdown">
     			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       					ICE CREAM<span class="caret"></span>
@@ -64,7 +61,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact_us.html">CONTACT US</a>
+                        <a href="contact_us.html">LOCATIONS</a>
                     </li>
                 </ul>
             </div>
@@ -72,38 +69,25 @@
         </div>
         <!-- /.container -->
     </nav>
-    <!-- Half Page Image Background Carousel Header -->
-    <header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-        </ol>
 
-        <!-- Wrapper for Slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/option3home1.jpg');"></div>
-            </div>
-            <div class="item">
-                <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/homecarousel1.jpg');"></div>
-                <div class="carousel-caption">
-                    <button type="button" class="btn-lg btn-primary">Try Now</button>
-                </div>
-            </div>
-        </div>
 
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
+    <!-- Carousel
+================================================== -->
+<div class="overlay">Welcome to Silver Dipper</div>
+<div id="myCarousel" class="carousel slide">
 
-    </header>
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/homepage.jpg" class="img-responsive">
+      <div class="container">
+        <div class="carousel-caption">
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /.carousel -->
+            
 
     <!-- Page Content -->
     <div class="container">
