--- a/drinks.html
+++ b/drinks.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
-    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,700,600,300,500' rel='stylesheet' type='text/css'>
 
 </head>
@@ -53,9 +53,6 @@
                     <li>
                         <a href="ourstory.html">OUR STORY</a>
                     </li>
-                    <li>
-                        <a href="menu.html">STORE MENU</a>
-                    </li>
                     <li role="presentation" class="dropdown">
     			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       					ICE CREAM<span class="caret"></span>
@@ -68,7 +65,7 @@
                             </ul>
                     </li>
                     <li>
-                        <a href="contact_us.html">CONTACT US</a>
+                        <a href="contact_us.html">LOCATIONS</a>
                     </li>
                 </ul>
             </div>
@@ -76,19 +73,23 @@
         </div>
         <!-- /.container -->
     </nav>
+    
+    <!-- Carousel
+================================================== -->
+<div class="overlay">Drinks</div>
+<div id="myCarousel" class="carousel slide">
 
-	<!-- Half Page Image Background Carousel Header -->
-    <header id="myCarousel" class="carousel slide">
-
-        <!-- Wrapper for Slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/drinkscarousel1.png');"></div>
-            </div>
-        </div>
-
-    </header>
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/drinkspage.jpg" class="img-responsive">
+      <div class="container">
+        <div class="carousel-caption">
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /.carousel -->
     <!-- Page Content -->
     <div class="container">
 
