Index Buttons work

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <br>
                     <br>
                     <p>Come visit us at both locations in West Lafayette, Indiana!</p>
-                    <p><button type="button" class="btn-sm btn-primary">Find Us</button></p>
+                    <p><button type="button" class="btn-sm btn-primary" onClick="location.href = 'contact_us.html';">Find Us</button></p>
                 </div>
                 <img src="images/outside.jpg" alt="">
             </div>
@@ -120,7 +120,7 @@
                     <br>
                     <br>
                     <p>Find more out here about how you can order your cake today!</p>
-                    <p><button type="button" class="btn-sm btn-primary">Order Now</button></p>
+                    <p><button type="button" class="btn-sm btn-primary" onClick="location.href = 'cakes.html'";>Order Now</button></p>
                 </div>
                 <img src="images/cake.jpg" alt="">
             </div>
@@ -134,7 +134,7 @@
                     <br>
                     <br>
                     <p>So many flavors, so little time...</p>
-                    <p><button type="button" class="btn-sm btn-primary">Pick your Flavor</button></p>
+                    <p><button type="button" class="btn-sm btn-primary" onClick="location.href = 'flavors.html';">Pick your Flavor</button></p>
                 </div>
                 <img src="images/3ConeHome.jpg" alt="">
             </div>
