--- a/cakes.html
+++ b/cakes.html
@@ -25,6 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
+    <link href='https://fonts.googleapis.com/css?family=Sniglet:400' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,700,600,300,500' rel='stylesheet' type='text/css'>
 
@@ -32,9 +33,11 @@
 
 <body>
 
-    <!-- Navigation -->
+<!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
         <div class="container">
+        <div class="pull-left"><a href="index.html"><img src="images/logo4.png" alt=""></a></div>
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -43,11 +46,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo4.png" alt=""></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul style="padding-top: 20px" class="nav navbar-nav">
+            	<div class="pull-right">
+                <ul style="padding-top: 0px" class="nav navbar-nav">
                     <li>
                         <a href="ourstory.html">OUR STORY</a>
                     </li>
@@ -66,89 +69,97 @@
                         <a href="contact_us.html">LOCATIONS</a>
                     </li>
                 </ul>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
-
     <!-- Carousel
 ================================================== -->
-<div class="overlay">Ice Cream Cakes</div>
+<div class="overlay"><strong>ICE CREAM CAKES</strong></div>
+<div class="break">
 <div id="myCarousel" class="carousel slide">
   <!-- Indicators -->
-  
   <div class="carousel-inner">
     <div class="item active">
       <img src="images/cakespage.jpg" class="img-responsive">
-      <div class="container">
-        <div class="carousel-caption">
-          </div>
-      </div>
     </div>
   </div>
 </div>
+</div>
 <!-- /.carousel -->
+
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Page Header -->
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Ice Cream
-                    <small>Cakes</small>
-                </h1>
+        	<div class="col-lg-12">
+            	<div class="text-center">
+                	<h2>Order a specialty cake today!<br>
+  						<small>Also available for immediate purchase</small></h2>
+							<p> Call (765) 743-7511 or (765) 464-1973 </p>
+                </div>
             </div>
         </div>
-        <!-- /.row -->
 
         <!-- Projects Row -->
    	  <div class="row">
+      		<hr>
             <div class="col-md-4 portfolio-item">
                 <img class="img-responsive" src="images/cakes/ZoreoCake.jpg">
                 <div class="text-center">
+                <h3>Zoreo</h3>
+
             	</div>
             </div>
             <div class="col-md-4 portfolio-item">
                 <img class="img-responsive" src="images/cakes/CakeBatterFudgeCake.jpg">
                 <div class="text-center">
+                <h3>Cake Batter Fudge</h3>
+
             	</div>
             </div>
             <div class="col-md-4 portfolio-item">
                 <img class="img-responsive" src="images/cakes/HeapsOfLoveCake.jpg">
                 <div class="text-center">
+                <h3>Heaps of Love</h3>
+
             	</div>
             </div>
           </div>
         <!-- /.row -->
+		<div class="row">
+        	<div class="col-lg-12">
+            	<div class="text-center">
+					<h2>Prices</h2><br>
+                    	<div class="col-sm-6">
+  						<h2><small>Medium (6 inches)</small></h2>
+						$20.99<br>
+  						<p>Serves 6-8</p>
+						</div>
+                    	<div class="col-sm-6">
+						<h2><small>Large (8 inches)</small></h2>
+						<p>$24.99<br>Serves 10-12</p>
+                        </div>
+                </div>
+           </div>
+       </div>
+</div> <!-- Container -->
+<br>
+<br>
 
-<h2>Order a specialty cake today!<br>
-  <small>Also available for immediate purchase</small></h2>
-<p> Call (765) 743-7511 or (765) 464-1973 </p>
-<h2>Prices<br>
-  <small>Medium (6 inches)</small></h2>
-<p>$20.99<br>
-  Serves 6-8</p>
-
-<h2><small>Large (8 inches)</small></h2>
-<p>$24.99<br>Serves 10-12      </p>
-<hr>
-
-        <!-- Footer -->
-        <footer>
+<!-- Footer -->
+        	<div class="footer-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                <div class="col-sm-10">
-                    <small>Copyright &copy; Silver Dipper 2014. All Rights Reserved.</small>
-                </div>
+                <div class="pull-right"><small>Copyright &copy; Silver Dipper 2015. All Rights Reserved&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small><div class="breakfoot"><br></div>
                 <a href="#"><img src="images/FB.png" alt=""></a> &nbsp;<a href="#"><img src="images/twit.png" alt=""></a> &nbsp;<a href="#"><img src="images/insta.png" alt=""></a> &nbsp;
                 </div>
             </div>
+          </div>
+        </div>
             <!-- /.row -->
-        </footer>
-
-    </div>
-    <!-- /.container -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
