--- a/flavors.html
+++ b/flavors.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Silver Dipper</title>
+    <title>Silver Dipper Ice Cream - Flavors</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -108,7 +108,7 @@
                 <div class="text-center">
                 <h3>Peppermint (Seasonal)</h3>
                 
-                <p>Ingredient to come...</p>
+                <p>An explosion of peppermint taste combined with candy cane pieces.</p>
             	</div>
             </div>
             <div class="col-md-4 portfolio-item">
