--- a/monster.html
+++ b/monster.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Silver Dipper</title>
+    <title>Silver Dipper Ice Cream - Mini Monster</title>
  
   <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -83,7 +83,7 @@
                     <div class="text-center">
                     <h1 class="section-heading">Mini Monster</h1>
                     </div>
-                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                    <p class="section-paragraph">Can't decide on just one of our amazing flavors? Why not try them all! Stop on in today and try one of our mini monsters, a 1 ounce scoop of every flavor. </p>
                     <hr>
                     
                     </div>
