--- a/ourstory.html
+++ b/ourstory.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Silver Dipper</title>
+    <title>Silver Dipper Ice Cream - Our Story</title>
  
   <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
